--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
   id 'net.kyori.indra' version "$indraVersion" apply false
   id 'net.kyori.indra.publishing.sonatype' version "$indraVersion" apply false
   id 'net.kyori.indra.license-header' version "$indraVersion" apply false
+  id 'maven-publish'
 }
 
 // Adventure version
